--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,12 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+.bg{
+  background-image: url("https://firebasestorage.googleapis.com/v0/b/quan-sblog.appspot.com/o/27336643_1897487033604039_8984620589435402605_n.jpg?alt=media&token=3f4c7563-0ce3-4ed6-afbc-3b4ab6535974");
+  /* Full height */
+  height: 100%; 
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
